# LED_Program

./: .gitignore  CMakeLists.txt  Makefile  README.md  platformio.ini  sdkconfig  sdkconfig.esp32thing  sdkconfig.old  test1.html
include/: Colour_Defines.h  LED.h  LED_Comms.h  Pattern_Defines.h  WiFi.h  WiFi_Credentials.h
main/: CMakeLists.txt  Colour_Defines.c  LED.c  LED_Comms.c  Pattern_Defines.c  Server.c  WiFi.c  main.c  new.c  test.html  test1.html
main/include/: Accelerometer.h  Colour_Defines.h  LED.h  LED_Comms.h  Pattern_Defines.h  Server.h  Speed_Period_Converter.h  WiFi.h
main/source/: Accelerometer.c  Colour_Defines.c  LED.c  LED_Comms.c  LED_Time.c  Pattern_Defines.c  Server.c  Speed_Period_Converter.c  WiFi.c
src/: Colour_Defines.c  LED.c  LED_Comms.c  LED_Time.c  Pattern_Defines.c  Server.c  Speed_Period_Converter.c  WiFi.c  main.c
