idf_component_register(
    SRCS "main.c"
        "source/Colour_Defines.c"
        "source/LED_Comms.c"
        "source/LED.c"
        "source/Pattern_Defines"
        "source/Server.c"
        "source/Speed_Period_Converter.c"
        "source/WiFi.c"
        "source/Accelerometer.c"
    INCLUDE_DIRS "include"
)
